ajout des fonctions init_vm

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -6,13 +6,15 @@
 #    By: ybeaure <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/25 09:52:13 by ybeaure           #+#    #+#              #
-#    Updated: 2016/11/25 09:58:44 by ybeaure          ###   ########.fr        #
+#    Updated: 2016/11/25 11:58:01 by cchameyr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = corewar
 
-SRCS = srcs/op_code.c \
+SRCS =	srcs/main.c \
+		srcs/op.c \
+		srcs/init_vm.c
 
 OBJS = $(SRCS:.c=.o)
 
