--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -6,7 +6,7 @@
 #    By: ybeaure <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/25 09:52:13 by ybeaure           #+#    #+#              #
-#    Updated: 2016/11/25 15:51:44 by cchameyr         ###   ########.fr        #
+#    Updated: 2016/11/25 15:54:52 by cchameyr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,6 +16,7 @@ SRCS =	srcs/main.c \
 		srcs/op.c \
 		srcs/init_vm.c \
 		srcs/exit_corewar.c \
+		srcs/get_chmps.c
 
 OBJS = $(SRCS:.c=.o)
 
