--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -6,7 +6,7 @@
 #    By: ybeaure <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/25 09:52:13 by ybeaure           #+#    #+#              #
-#    Updated: 2016/11/29 15:55:17 by cchameyr         ###   ########.fr        #
+#    Updated: 2016/11/29 16:22:03 by cchameyr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,6 +28,7 @@ FILES =		main.c \
 			parse_exec_op.c \
 			zjmp.c \
 			checks.c \
+			display_champ.c \
 
 SRCS =		$(addprefix srcs/, $(FILES))
 
