ajout de start_battle() update_cycle() et exec_process()

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -6,7 +6,7 @@
 #    By: ybeaure <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/25 09:52:13 by ybeaure           #+#    #+#              #
-#    Updated: 2016/11/30 15:07:10 by cchameyr         ###   ########.fr        #
+#    Updated: 2016/12/06 14:49:36 by cchameyr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,6 +31,7 @@ FILES =		main.c \
 			display_debug.c \
 			init_start.c \
 			list_process.c \
+			start_battle.c
 
 SRCS =		$(addprefix srcs/, $(FILES))
 
